	* Kconfig, */Kconfig:  Added skeleton Kconfig files to all directories that
	  may need them.

6.18 2012-05-19 Gregory Nutt <gnutt@nuttx.org>

	* Kconfig:  Continued Kconfig file updates (no longer tracking on a per-file
	  basis in the ChangeLog)
	* apps/examples/watchdog:  Add a watchdog timer example.
	* apps/examples/tiff:  Fix wrong path used for temporary file.
	* apps/examples/touchscreen:  Standardize the board-specific, touchscreen
	  initialization interfaces.

6.19 2012-06-15 Gregory Nutt <gnutt@nuttx.org>

	* apps/nshlib/nsh_usbdev.c:  Add the capability to use an arbitrary USB
	  device as the console (not necessarily /dev/console).  This is a useful
	  option because then you can still use the serial console to debug with.
	* apps/nshlib/nsh_usbdev.c:  User now has to press ENTER 3 times before
	  USB console will start.  Otherwise, the USB console starts before there
	  is anyone at the other end to listen.
	* apps/nshlib/nsh_usbdev.c and nsh_consolemain.c:  Add support for the USB
	  capability when a USB console is used.
	* apps/nshlib/nsh_fscmds.c:  Add the 'mv' command

6.20 2012-07-12 Gregory Nutt <gnutt@nuttx.org>

	* namedapp/exec_namedapp.c - Correct an error when round robin scheduling
	  is enabled.  The priority of the new, named application was erroneously
	  being set to the priority of the parent thread; losing its configured
	  priority.  Reported by Mike Smith.

6.21 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/include/: Stylistic clean-up of all header files.
	* apps/modbus and apps/include/modbus:  A port of freemodbus-v1.5.0
	  has been added to the NuttX apps/ source tree.
	* apps/examples/modbus:  A port of the freemodbus-v1.5.0 "demo"
	  program that will be used to verify the FreeModBus port
	* apps/modbus:  Don't use strerror().  It is just too big.
	* apps/modbus:  Add CONFIG_MB_TERMIOS.  If the driver doesn't support
	  termios ioctls, then don't bother trying to configure the baud, parity
	  etc.